--- a/templates/pages/about.html
+++ b/templates/pages/about.html
@@ -1,10 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{% extends 'base.html' %}
 
-</body>
-</html>
+{% block title %}
+- About us!
+{% endblock %}
+
+{% block content %}
+<h1>About</h1>
+{% endblock %}
