--- a/templates/partials/_navbar.html
+++ b/templates/partials/_navbar.html
@@ -1,5 +1,5 @@
 <!-- Bootstrap Navbar-->
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <a class="navbar-brand" href="#">Reddit Clone</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -20,9 +20,12 @@
           </li>
         {% else %}
           <li class="nav-item">
+            <a class="nav-link" href="#">sign up</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link" href="#">log in</a>
           </li>
-
+        {% endif %}
     </ul>
   </div>
 </nav>
