--- a/templates/partials/_navbar.html
+++ b/templates/partials/_navbar.html
@@ -20,7 +20,7 @@
           </li>
         {% else %}
           <li class="nav-item">
-            <a class="nav-link" href="#">sign up</a>
+            <a class="nav-link" href="{% url 'signup' %}">sign up</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">log in</a>
