--- a/templates/partials/_navbar.html
+++ b/templates/partials/_navbar.html
@@ -13,7 +13,7 @@
     <ul class="navbar-nav ml-auto">
         {% if user.is_authenticate %}
           <li class="nav-item">
-            <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">{{ user.username }}</a>
+            <a class="nav-link disabled" href="{% url 'dashboard' %}" tabindex="-1" aria-disabled="true">{{ user.username }}</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">log out</a>
@@ -23,7 +23,7 @@
             <a class="nav-link" href="{% url 'signup' %}">sign up</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">log in</a>
+            <a class="nav-link" href="{% url 'login' %}">log in</a>
           </li>
         {% endif %}
     </ul>
