--- a/templates/accounts/dashboard.html
+++ b/templates/accounts/dashboard.html
@@ -1,10 +1,13 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-<h1>Dashboard</h1>
-</body>
-</html>
+{% extends 'base.html' %}
+
+{% block title %}
+- Log in
+{% endblock %}
+
+{% block content %}
+<div class="container">
+    <h1>{{ user.username }}'s posts</h1>
+    <hr />
+
+</div>
+{% endblock %}
