--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -1,10 +1,26 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{% extends 'base.html' %}
 
-</body>
-</html>
+{% block title %}
+- Log in
+{% endblock %}
+
+{% block content %}
+<div class="container">
+    <h1>log in</h1>
+    <hr />
+    <form action="{% url 'login' %}" method="POST">
+        {% csrf_token %}
+        {% if messages %}
+            {% include 'partials/_alerts.html' %}
+        {% endif %}
+        <div class="form-group col-md-6">
+            <input type="text" class="form-control" name="username" id="username" placeholder="username">
+        </div>
+
+        <div class="form-group col-md-6">
+            <input type="password" class="form-control" name="password" id="password" placeholder="password">
+        </div>
+        <button type="submit" class="btn btn-secondary">log in</button>
+    </form>
+</div>
+{% endblock %}
