--- a/templates/partials/_navbar.html
+++ b/templates/partials/_navbar.html
@@ -16,7 +16,7 @@
             <a class="nav-link text-muted" href="{% url 'dashboard' %}" >{{ user.username }}</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">log out</a>
+            <a class="nav-link" href="{% url 'logout' %}">log out</a>
           </li>
         {% else %}
           <li class="nav-item">
