--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -3,5 +3,6 @@
 {% block title %} - Welcome! {% endblock %}
 
 {% block content %}
-<h1>Index</h1>
+<h1>posts from nowhere!</h1>
+<hr />
 {% endblock %}
