cleaned up some unused files in apps: pages and accounts
* tests.py and models.py

--- a/templates/pages/about.html
+++ b/templates/pages/about.html
@@ -5,6 +5,9 @@
 {% endblock %}
 
 {% block content %}
-<h1>about reddit clone</h1>
-<hr />
+<div class="container">
+    <h1>about reddit clone</h1>
+    <hr />
+</div>
+
 {% endblock %}
