--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -3,6 +3,9 @@
 {% block title %} - Welcome! {% endblock %}
 
 {% block content %}
-<h1>posts from nowhere!</h1>
-<hr />
+<div class="container">
+     <h1>posts from nowhere!</h1>
+    <hr />
+</div>
+
 {% endblock %}
