--- a/templates/partials/_navbar.html
+++ b/templates/partials/_navbar.html
@@ -1,6 +1,6 @@
 <!-- Bootstrap Navbar-->
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <a class="navbar-brand" href="#">Reddit Clone</a>
+  <a class="navbar-brand" href="{% url 'index' %}">Reddit Clone</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
