--- a/templates/accounts/dashboard.html
+++ b/templates/accounts/dashboard.html
@@ -6,7 +6,7 @@
 
 {% block content %}
 <div class="container">
-    <h1>{{ user.username }}'s posts</h1>
+    <h1>{{ user.username }}'s dashboard</h1>
     <hr />
 
 </div>
