--- a/templates/partials/_navbar.html
+++ b/templates/partials/_navbar.html
@@ -7,7 +7,7 @@
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav">
       <li class="nav-item active">
-        <a class="nav-link" href="#">new post</a>
+        <a class="nav-link" href="{% url 'newpost' %}">new post</a>
       </li>
     </ul>
     <ul class="navbar-nav ml-auto">
