--- a/templates/partials/_navbar.html
+++ b/templates/partials/_navbar.html
@@ -1,6 +1,12 @@
 <!-- Bootstrap Navbar-->
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <a class="navbar-brand" href="{% url 'index' %}">Reddit Clone</a>
+  <a class="navbar-brand"
+     {% if user.is_authenticated %}
+     href="{% url 'list' %}"
+     {% else %}
+     href="{% url 'index' %}"
+     {% endif %}
+  >Reddit Clone</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -13,7 +19,7 @@
     <ul class="navbar-nav ml-auto">
         {% if user.is_authenticated %}
           <li class="nav-item">
-            <a class="nav-link text-muted" href="{% url 'dashboard'  %}" >{{ user.username }}</a>
+            <a class="nav-link text-muted" href="{% url 'dashboard'  %}" >{{ user.username }} (dasboard)</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="{% url 'logout' %}">log out</a>
