--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -4,8 +4,11 @@
 
 {% block content %}
 <div class="container">
-     <h1>posts from nowhere!</h1>
-    <hr />
+    <br>
+    <br>
+    <br>
+     <h1 class="text-center" >posts from nowhere!</h1>
+
 </div>
 
 {% endblock %}
