--- a/templates/posts/post_list.html
+++ b/templates/posts/post_list.html
@@ -6,31 +6,46 @@
 
 {% block content %}
 <div class="container">
-     <h1>posts and more posts...</h1>
+    <br>
+    <h1>posts and more posts...</h1>
     <hr />
+    <br>
     {% if posts %}
-        <table class="table">
-            <thead class="thead-light">
-                <tr>
-                    <th scope="col">votes</th>
-                    <th scope="col">title</th>
-                    <th scope="col">description</th>
-                    <th scope="col">posted by</th>
-                    <th scope="col">pub date</th>
-                </tr>
-            </thead>
+        <table class="table table-borderless">
             {% for post in posts %}
             <tbody>
                 <tr>
-                    <th scope="row">{{ post.votes }}</th>
+                    <th scope="row" class="text-center">
+                        <form action="{% url 'vote_up' post.id %}" method="POST">
+                            {% csrf_token %}
+                            <button class="btn">
+                                <i class="fas fa-angle-up"></i>
+                            </button>
+                        </form>
+                            {{ post.votes }}
+                        <form action="{% url 'vote_down' post.id %}" method="POST">
+                            {% csrf_token %}
+                            <button class="btn">
+                                <i class="fas fa-angle-down"></i>
+                            </button>
+                        </form>
+                    </th>
                     <td>
-                        <a class="text-dark" href="{{ post.url }}">{{ post.title }}</a>
+                        <br>
+                        <a class="text-dark" href="{{ post.url }}">
+                            <strong>{{ post.title }}</strong>
+                        </a>
+                        <p>
+                            {{ post.short_description }}
+                            <br>
+                            <a class="text-dark font-italic" href="{% url 'postedby' post.posted_by.id %}">
+                                <small>Posted by {{ post.posted_by }}</small>
+                            </a>
+                            <small>
+                                - Posted {{ post.pub_date | timesince }} ago
+                            </small>
+                        </p>
                     </td>
-                    <td class="font-italic">{{ post.short_description }}</td>
-                    <td>
-                        <a class="text-dark" href="{% url 'postedby' post.posted_by.id %}">{{ post.posted_by }}</a>
-                    </td>
-                    <td>{{ post.pub_date | timesince }}</td>
                 </tr>
             </tbody>
             {% endfor %}
