--- a/templates/base.html
+++ b/templates/base.html
@@ -7,7 +7,7 @@
 
 <!--    Bootstrap CSS-->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-
+    <script src="https://kit.fontawesome.com/dcf2502ee4.js" crossorigin="anonymous"></script>
     <title>Reddit Clone {% block title %}{% endblock %}</title>
 </head>
 <body>
